--- a/SMA/app/src/main/res/layout/activity_image.xml
+++ b/SMA/app/src/main/res/layout/activity_image.xml
@@ -6,4 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".websearch.ImageActivity">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
