--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,29 +53,16 @@
         app:layout_constraintEnd_toEndOf="@+id/income"
         app:layout_constraintTop_toBottomOf="@+id/income" />
 
-    <EditText
-        android:id="@+id/month"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="307dp"
-        android:ems="10"
-        android:inputType="textPersonName"
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="215dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="216dp"
         android:minHeight="48dp"
-        android:text="Month"
-        app:layout_constraintEnd_toStartOf="@+id/bSearch"
+        android:spinnerMode="dropdown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.163"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/bSearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="22dp"
-        android:text="Search"
-        android:onClick="clicked"
-        app:layout_constraintBaseline_toBaselineOf="@+id/month"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/month" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
